--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
+    "@shopify/draggable": "^1.0.0-beta.8",
     "sirv-cli": "^0.4.4"
   },
   "scripts": {
